# ar-image-generation

./: .gitignore  Makefile  README.md  pyproject.toml
configs/approach/: var.yaml
configs/dataset/: medmnist_path64.yaml
configs/experiment/: custom_graft_gs_code_only_prior_pathmnist64.yaml  custom_graft_gs_hybrid_prior_pathmnist64.yaml  custom_graft_gs_hybrid_prior_pathmnist64_1024.yaml  custom_graft_gs_prior_pathmnist64.yaml  custom_graft_gs_quantized_decoder_ft_pathmnist64_1024.yaml  custom_graft_gs_residual_hybrid_prior_pathmnist64.yaml  custom_graft_gs_template_code_prior_pathmnist64.yaml  custom_graft_gs_tokenizer_pathmnist64.yaml  maskgit_pathmnist64_debug.yaml  raster_pathmnist64_debug.yaml  smoke_test_maskgit.yaml  (+10 more)
docs/: adding_new_approach.md  architecture.md  experiments.md
scripts/: build_graft_gs_residual_codebook.py  evaluate.py  evaluate_custom.py  plot_convergence.py  preview_dataset.py  run_pipeline.py  sample.py  sample_graft_gs_code_only_prior.py  sample_graft_gs_code_only_prior_geometry_bank.py  sample_graft_gs_prior.py  sample_graft_gs_residual_hybrid_prior.py  sample_graft_gs_template_code_prior.py  train_approach.py  train_graft_gs_code_only_prior.py  train_graft_gs_prior.py  train_graft_gs_residual_hybrid_prior.py  train_graft_gs_template_code_prior.py  train_graft_gs_tokenizer.py  train_tokenizer.py
tests/: test_checkpointing.py  test_config.py  test_custom_prior.py  test_custom_renderer.py  test_custom_tokenizer.py  test_evaluation_metrics.py  test_imports.py  test_maskgit_model.py  test_medmnist_data.py  test_raster_model.py  test_registry.py  test_transformer_shapes.py  test_var_model.py  test_var_multiscale.py  test_var_sampler.py  test_vqvae_shapes.py
(+38 files in other folders)
