[project]
name = "ar-image-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vpow10", email = "jan.szymczak10@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ar-image-generation = "ar_image_generation:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
